# rumore

./: README.md  README.org  pyproject.toml
rumore/: __init__.py  rumore.py
